# tapl-haskell

./: LICENSE  README.md
arith-evaluator/: .gitignore  arith-evaluator.cabal
arith-evaluator/src/: Lexer.x  Main.hs  Parser.y
extra/arith-evaluator/: arith-evaluator.cabal
extra/arith-evaluator/examples/: ex3.in
extra/arith-evaluator/src/: Parser.y
extra/re/: re.cabal
extra/re/src/: Base.hs  Lexer.x  Main.hs  NFA.hs  Parser.y  VM.hs
re/: grammar  re.cabal
re/src/: Base.hs  Lexer.x  Main.hs
regex/: regex.cabal
regex-matching/: regex-matching.cabal
regex-matching/src/: Lexer.x  Main.hs  NFA.hs  Parser.y  Type.hs  Types.hs
regex/src/: Lexer.x  NFA.hs  Types.hs
tapl/: .gitignore  README.md  tapl.cabal
tapl-arith/: .gitignore  tapl-arith.cabal
tapl-arith/examples/: ex2.in  ex6.in
tapl-arith/src/: Evaluator.hs  Lexer.x  Main.hs  Parser.y  Type.hs  Types.hs
tapl-tyarith/: tapl-tyarith.cabal
tapl-tyarith/src/: Evaluator.hs  Lexer.x  Main.hs  Parser.y  TypeChecker.hs  Types.hs
tapl-untyped/: tapl-untyped.cabal
tapl-untyped/examples/: ex1.in  ex2.in  ex3.in  ex4.in
tapl-untyped/src/: Context.hs  DeBruijn.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Types.hs
tapl/arith/: Base.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Runner.hs  Test.hs  arith.cabal
tapl/arith/examples/: ex3.in  ex5.in
tapl/arith/src/: Evaluator.hs  Main.hs
tapl/fullsimple/: Base.hs  Context.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Runner.hs  Test.hs  Type.hs
tapl/fullsimple/examples/: ex1.in  ex2.in  ex3.in  ex4.in  ex5.in
tapl/fullsimple/examples/outputs/: ex1.out  ex2.out  ex3.out  ex4.out  ex5.out
tapl/fullsub/: Base.hs  Lexer.x  Parser.y
tapl/helper/TAPL/: Helper.hs
tapl/helper/TAPL/Alex/: Helper.hs
tapl/simplebool/: Base.hs  Context.hs  DeBruijn.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Runner.hs  Test.hs  Type.hs  TypeChecker.hs  Types.hs
tapl/simplebool/examples/: ex1.in  ex3.in
tapl/simplebool/examples/outputs/: ex1.out  ex2.out
tapl/simplesub/: Base.hs  Context.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Runner.hs  Test.hs  Type.hs
tapl/simplesub/examples/: ex1.in  ex2.in  ex3.in
tapl/simplesub/examples/outputs/: ex1.out  ex3.out
tapl/tapl-base/TAPL/: Alex.hs  Meow.hs
tapl/tapl-base/TAPL/Alex/: Base.hs
tapl/tyarith/: Base.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Type.hs  TypeChecker.hs  Types.hs  tyarith.cabal
tapl/tyarith/src/: Evaluator.hs  Lexer.x  Main.hs  Parser.y
tapl/untyped/: Base.hs  Context.hs  DeBruijn.hs  Evaluator.hs  Lexer.x  Main.hs  PPrint.hs  Parser.y  Test.hs  untyped.cabal
tapl/untyped/examples/: ex1.in  ex10.in
tapl/untyped/examples/outputs/: ex1.out  ex2.out  ex3.out  ex6.out  ex7.out  ex8.out  ex9.out
tapl/untyped/src/: Context.hs  DeBruijn.hs  Main.hs  Parser.y
