name:                arith-evaluator
version:             0.1.0.0
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2016 foreverbell
category:            PLT
build-type:          Simple
cabal-version:       >=1.10

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
  build-tools:         alex, happy
  other-modules:
    Lexer
    Parser
    Main
