name:                tapl 
version:             0.1.0.0
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2016 foreverbell
category:            PLT
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      helper
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -O2 -W -fwarn-tabs
  exposed-modules:
    TAPL.Helper

executable arith
  hs-source-dirs:      arith
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Evaluator Lexer Parser PPrint Types

executable untyped
  hs-source-dirs:      untyped
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array, unordered-containers
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Context DeBruijn Evaluator Lexer Parser PPrint Types

executable tyarith
  hs-source-dirs:      tyarith
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Evaluator Lexer Parser PPrint TypeChecker Types

executable simplebool
  hs-source-dirs:      simplebool
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array, unordered-containers
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Context DeBruijn Evaluator Lexer Parser PPrint TypeChecker Types
