name:                tapl 
version:             0.1.0.0
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2016 foreverbell
category:            PLT
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      tapl-base
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -O2 -W -fwarn-tabs
  exposed-modules:
    TAPL.Alex.Base

executable arith
  hs-source-dirs:      arith
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Base Evaluator Lexer Parser PPrint

executable untyped
  hs-source-dirs:      untyped
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array, unordered-containers, mtl, transformers
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Base Context Evaluator Lexer Parser PPrint

executable tyarith
  hs-source-dirs:      tyarith
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Base Evaluator Lexer Parser PPrint Type

executable simplebool
  hs-source-dirs:      simplebool
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array, unordered-containers, mtl, transformers
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Base Context Evaluator Lexer Parser PPrint Type

executable fullsimple
  hs-source-dirs:      fullsimple
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tapl, array, unordered-containers, mtl, transformers
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Base Context Lexer
