name:                re
version:             0.1.0.0
author:              foreverbell
maintainer:          dql.foreverbell@gmail.com
copyright:           2016 foreverbell
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable re
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , vector
                     , containers
                     , unordered-containers
  build-tools:         alex, happy
  ghc-options:         -O2 -W -fwarn-tabs
  other-modules:       Base Lexer NFA Parser VM
